@@ -203,7 +203,9 @@ struct color_t states_inf[STATES_NUMBER] = {
   {STATE_26, STATE_26_LBL, STATE_26_COLOR},
   {STATE_27, STATE_27_LBL, STATE_27_COLOR},
   {STATE_28, STATE_28_LBL, STATE_28_COLOR},
-  {STATE_29, STATE_29_LBL, STATE_29_COLOR}
+  {STATE_29, STATE_29_LBL, STATE_29_COLOR},
+  {STATE_30, STATE_30_LBL, STATE_30_COLOR},
+  {STATE_31, STATE_31_LBL, STATE_31_COLOR}
 };
 
 struct color_t gradient_inf[GRADIENT_NUMBER] = {
